- Fixed alignment issues. - Removed knock branding

--- a/packages/commonwealth/client/scripts/views/components/KnockNotifications/KnockNotifications.scss
+++ b/packages/commonwealth/client/scripts/views/components/KnockNotifications/KnockNotifications.scss
@@ -2,3 +2,7 @@
   color: rgb(117, 117, 117);
   fill: rgb(255, 255, 255) !important;
 }
+
+.KnockNotifications .rnf-notification-feed__knock-branding {
+  display: none;
+}
