--- a/packages/commonwealth/client/scripts/views/components/SublayoutHeader/DesktopHeader/DesktopHeader.scss
+++ b/packages/commonwealth/client/scripts/views/components/SublayoutHeader/DesktopHeader/DesktopHeader.scss
@@ -50,7 +50,7 @@
         margin-right: 14px;
       }
 
-      .knock-notifications-button {
+      .KnockNotifications {
         margin-top: auto;
         margin-bottom: auto;
         margin-left: 5px;
